--- a/views/admin/offers.ejs
+++ b/views/admin/offers.ejs
@@ -61,7 +61,7 @@
                     <td><span class="badge bg-<%= offer.status === 'active' ? 'success' : 'danger' %>"><%= offer.status %></span></td>
                     <td>
                       <a href="#" onclick="deleteOffer('<%= offer._id %>')" class="btn btn-sm btn-outline-danger">
-                        <i class="fas fa-trash"></i>
+                        <i class="fas fa-trash">delete</i>
                       </a>
                     </td>
                   </tr>
