--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -905,9 +905,9 @@ input.checked {
 }
 
 .product_price h4 a {
-	color: #959596;
+	color: #000000;
     font-size: 0.8em;
-    font-family: 'Inconsolata', monospace;
+    font-family:" Helvetica Now Text Medium", Helvetica, Arial, sans-serif;
 }
 
 /*-- //customer --*/
