--- a/views/admin/sales-report.ejs
+++ b/views/admin/sales-report.ejs
@@ -50,7 +50,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Total Sales</h5>
-                            <p class="card-text h3">₹<%= totalSales.toFixed(2) %></p>
+                            <p class="card-text h3">$<%= totalSales.toFixed(2) %></p>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Total Discount</h5>
-                            <p class="card-text h3">₹<%= totalDiscount.toFixed(2) %></p>
+                            <p class="card-text h3">$<%= totalDiscount.toFixed(2) %></p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Total Actual Price</h5>
-                            <p class="card-text h3">₹<%= totalActualPrice.toFixed(2) %></p>
+                            <p class="card-text h3">$<%= totalActualPrice.toFixed(2) %></p>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Total Sales Price</h5>
-                            <p class="card-text h3">₹<%= totalOfferPrice.toFixed(2) %></p>
+                            <p class="card-text h3">$<%= totalOfferPrice.toFixed(2) %></p>
                         </div>
                     </div>
                 </div>
