--- a/views/user/order-details-page.ejs
+++ b/views/user/order-details-page.ejs
@@ -238,7 +238,7 @@
             "key": "<%= process.env.RAZOR_PAY_KEY_ID %>",
             "amount": data.amount,
             "currency": "INR",
-            "name": "Nike",
+            "name": "GOOGLES SHOP",
             "description": "Re-payment for Order",
             "order_id": data.razorpayOrderId,
             "handler": function (response){
