--- a/views/user/razorpay-checkout.ejs
+++ b/views/user/razorpay-checkout.ejs
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <h1><i class="fas fa-lock secure-icon"></i>Secure Razorpay Checkout</h1>
-        <p>Total Amount: ₹<%= totalPrice %></p>
+        <p>Total Amount: $<%= totalPrice %></p>
         <button id="pay-button">Pay Now</button>
     </div>
 
