--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -46,7 +46,7 @@
                                         </div>
                                         <div class="p-2 flex-grow-1">
                                             <a href="/product/<%= item.productId._id %>">
-                                                <h3 class="wishlist-title"><%= item.productId.productName %></h3>
+                                                <h3 class="wishlist-title" style="color: black;"><%= item.productId.productName %></h3>
                                             </a>
                                             <!-- Placeholder for rating if required later -->
                                             <!-- 
@@ -64,15 +64,15 @@
                                             </div>
                                             -->
                                             <p class="wishlist-price">
-                                                ₹<% if (item.productId.offerPrice && item.productId.offerPrice < item.productId.salePrice) { %>
+                                                $<% if (item.productId.offerPrice && item.productId.offerPrice < item.productId.salePrice) { %>
                                                  
-                                                  <del><%= item.productId.regularPrice %></del> ₹<%= item.productId.offerPrice %>
+                                                  <del><%= item.productId.regularPrice %></del> $<%= item.productId.offerPrice %>
                                                 <% } else if (item.productId.salePrice < item.productId.regularPrice) { %>
                                                   
-                                                  <del><%= item.productId.regularPrice %></del> ₹<%= item.productId.salePrice %>
+                                                  <del><%= item.productId.regularPrice %></del> $<%= item.productId.salePrice %>
                                                 <% } else if (item.productId.salePrice === item.productId.regularPrice && item.productId.offerPrice && item.productId.offerPrice < item.productId.salePrice) { %>
                                                   
-                                                  <del><%= item.productId.regularPrice %></del> ₹<%= item.productId.offerPrice %>
+                                                  <del><%= item.productId.regularPrice %></del> $<%= item.productId.offerPrice %>
                                                 <% } else { %>
                                                   
                                                   <%= item.productId.regularPrice %>
@@ -80,13 +80,13 @@
                                               </p>
                                               
                                         </div>
-                                        <form id="addToCartForm-<%= item.productId._id %>" onsubmit="return false;">
+                                        <!-- <form id="addToCartForm-<%= item.productId._id %>" onsubmit="return false;">
                                             <input type="hidden" name="productId" value="<%= item.productId._id %>">
                                             <input type="hidden" name="quantity" value="1">
                                             <button type="button" class="googles-cart pgoogles-cart mr-3" onclick="addToCart('<%= item.productId._id %>', 1)">
                                               <i class="fas fa-cart-plus"></i>
                                             </button>
-                                        </form>
+                                        </form> -->
                                         <div class="p-2 flex-shrink-0">
                                             <i class="fa fa-trash fa-lg wishlist-remove" style="cursor: pointer;" data-product-id="<%= item.productId._id %>"></i> 
                                         </div>
