--- a/public/css/style.css
+++ b/public/css/style.css
@@ -686,7 +686,7 @@ figure.effect-lexi h3 {
     color: #fff;
 }
 figure.effect-lexi h3 span {
-    color: #ff4e00;
+    color: #000000;
 }
 
 figure.effect-lexi p {
@@ -1130,7 +1130,7 @@ ul.social-icons li a i.fab.fa-google-plus-g:hover {
 }
 
 .ser-first-grid:hover span {
-    color: #F60B0E;
+    color: #080808;
 }
 
 .ser-first-grid p {
