--- a/public/sass/_about.scss
+++ b/public/sass/_about.scss
@@ -39,7 +39,7 @@
     padding: 130px 150px 175px;
 
     span {
-        color: #e53637;
+        color: #000000;
         font-size: 72px;
     }
 
