--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -111,7 +111,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								  <% } else { %>
 									<div class="row">
 									  <% products.forEach(product => { %>
-										<% if ((product.quantity.S || product.quantity.M || product.quantity.L) > 0) { %> <!-- Check if the quantity is greater than 0 -->
+										<% if (product.quantity.S > 0 || product.quantity.M > 0 || product.quantity.L > 0 || product.quantity['7'] > 0 || product.quantity['8'] > 0 || product.quantity['9'] > 0) { %>
+											<!-- Check if the quantity is greater than 0 -->
 										  <div class="col-md-3 product-men women_two shop-gd">
 											<div class="product-nike-info nike">
 											  <div class="men-pro-item">
@@ -119,10 +120,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												  <img src="/uploads/product-images/<%= product.productImage[0] %>" class="img-fluid" alt="<%= product.productName %>">
 												  <div class="men-cart-pro">
 													<div class="inner-men-cart-pro">
-													  <a href="/product/<%= product._id %>" class="link-product-add-cart">Quick View</a>
+													  <a href="/product/<%= product._id %>" class="link-product-add-cart"></a>
 													</div>
 												  </div>
-												  <span class="product-new-top">New</span>
+												 
 												</div>
 												<div class="item-info-product">
 												  <div class="info-product-price">
@@ -153,16 +154,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</script>
 														<div class="grid-price mt-2">
 														  <% if (product.offerPrice && product.offerPrice < product.salePrice) { %>
-															<span class="money" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="money" style="color: red; font-weight: bold;">$<%= product.offerPrice %></span>
+															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.offerPrice %></span>
 														  <% } else if (product.salePrice < product.regularPrice) { %>
-															<span class="money" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="money" style="color: red; font-weight: bold;">$<%= product.salePrice %></span>
+															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.salePrice %></span>
 														  <% } else if (product.salePrice === product.regularPrice && product.offerPrice && product.offerPrice < product.salePrice) { %>
-															<span class="money" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="money" style="color: red; font-weight: bold;">$<%= product.offerPrice %></span>
+															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.offerPrice %></span>
 														  <% } else { %>
-															<span class="money">$<%= product.regularPrice %></span>
+															<span class="">$<%= product.regularPrice %></span>
 														  <% } %>
 														</div>
 													  </div>
@@ -225,93 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<!--//product right-->
 					</div>
-					<!-- Slider -->
-				<!-- <div class="slider-img mid-sec mt-lg-5 mt-2">
-						<!--//banner-sec-->
-						<!-- <h3 class="tittle-w3layouts text-left my-lg-4 my-3">Featured Products</h3>
-						<div class="mid-slider">
-							<div class="owl-carousel owl-theme row">
-								<div class="item">
-									<div class="gd-box-info text-center">
-										<div class="product-men women_two bot-gd">
-											<div class="product-nike-info slide-img nike">
-												<div class="men-pro-item">
-													<div class="men-thumb-item">
-														<img src="images/s5.jpg" class="img-fluid" alt="">
-														<div class="men-cart-pro">
-															<div class="inner-men-cart-pro">
-																<a href="/single" class="link-product-add-cart">Quick View</a>
-															</div>
-														</div>
-														<span class="product-new-top">New</span>
-													</div>
-													<div class="item-info-product">
-	
-														<div class="info-product-price">
-															<div class="grid_meta">
-																<div class="product_price">
-																	<h4>
-																		<a href="/single">Fastrack Aviator </a>
-																	</h4>
-																	<div class="grid-price mt-2">
-																		<span class="money ">$325.00</span>
-																	</div>
-																</div>
-																<ul class="stars">
-																	<li>
-																		<a href="#">
-																			<i class="fa fa-star" aria-hidden="true"></i>
-																		</a>
-																	</li>
-																	<li>
-																		<a href="#">
-																			<i class="fa fa-star" aria-hidden="true"></i>
-																		</a>
-																	</li>
-																	<li>
-																		<a href="#">
-																			<i class="fa fa-star" aria-hidden="true"></i>
-																		</a>
-																	</li>
-																	<li>
-																		<a href="#">
-																			<i class="fa fa-star-half-o" aria-hidden="true"></i>
-																		</a>
-																	</li>
-																	<li>
-																		<a href="#">
-																			<i class="fa fa-star-o" aria-hidden="true"></i>
-																		</a>
-																	</li>
-																</ul>
-															</div>
-															<div class="nike single-item hvr-outline-out">
-																<form action="#" method="post">
-																	<input type="hidden" name="cmd" value="_cart">
-																	<input type="hidden" name="add" value="1">
-																	<input type="hidden" name="nike_item" value="Fastrack Aviator">
-																	<input type="hidden" name="amount" value="325.00">
-																	<button type="submit" class="nike-cart pnike-cart">
-																		<i class="fas fa-cart-plus"></i>
-																	</button>
 
-																</form>
-	
-															</div>
-														</div>
-	
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								</div>
-						</div> -->
-					<!-- </div> --> 
-					<!--//slider-->
-				<!-- </div>
-			</div> -->
 		</section>
 		<!--footer -->
 		<%-include("../../views/partials/user/footer")%>
